Cleanup ReplicationServerTest and AckedCopyTest (#776)